# cmake-vcpkg-gtest

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/example/: lib.hpp
source/: lib.cpp
src/: main.cpp
src/example/: lib.cpp
test/: CMakeLists.txt
test/source/: example-vc_test.cpp
test/src/: example-vc_test.cpp
